# toy

./: .gitignore  README.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  accuracy_checker.py  kernel_registry.py  kernel_runner.py  logger.py  performance_profiler.py
cuda_kernels/: __init__.py  matrix_add.cu  matrix_mul.cu  softmax.cu  wrapper.py
docs/: design.md
examples/: demo_matmul.py  demo_matrix_add.py  demo_softmax.py
include/: common.h
pytorch_ops/: __init__.py  matrix_add.py  matrix_mul.py  softmax.py
scripts/: build_cuda.py  build_kernels.sh  install_cuda.py  run_benchmark.py
src/: CMakeLists.txt
src/bindings/: cuda_kernels.cpp  matmul.cpp  matrix_add.cpp  softmax.cpp
src/cuda/: matmul_kernel.cu  matrix_add_kernel.cu  softmax_kernel.cu
tests/: __init__.py  accuracy_test.py  performance_test.py  run_all_tests.py  test_matmul.py  test_matrix_add.py  test_softmax.py  visualization.py
tilelang_kernels/: __init__.py  matmul_tilelang.py  matrix_add_tilelang.py  softmax_tilelang.py
tilelang_ops/: __init__.py  matrix_add.py  matrix_mul.py  softmax.py
torch_kernels/: __init__.py  matmul_torch.py  matrix_add_torch.py  softmax_torch.py
triton_kernels/: __init__.py  matmul_triton.py  matrix_add_triton.py  softmax_triton.py
triton_ops/: __init__.py  matrix_add.py  matrix_mul.py  softmax.py
