[build-system]
requires = ["setuptools", "wheel", "pybind11", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "high-performance-kernels"
version = "0.1.0"
description = "High-performance kernel development and comparison framework"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
]

dependencies = [
    "torch>=2.0.0",
    "triton>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "pytest>=7.0.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/high-performance-kernels"
Repository = "https://github.com/yourusername/high-performance-kernels"
Issues = "https://github.com/yourusername/high-performance-kernels/issues"

[tool.setuptools]
packages = [
    "core",
    "triton_kernels", 
    "tilelang_kernels",
    "torch_kernels",
    "tests",
]

[tool.setuptools.package-data]
"*" = ["*.py", "*.cu", "*.cpp", "*.h"]
